--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1291,3 +1291,58 @@ td img {
   box-shadow: 0 0 0 #205d88; /* Remove a sombra */
   transform: translate(0, 0); /* Volta o elemento para a posição original */
 }
+
+#filters {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+}
+
+#applyFilters {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: #205d88;
+  color: #fff;
+  cursor: pointer;
+}
+
+#applyFilters:hover {
+  background-color: #704a4a;
+}
+
+#applyFilters:active {
+  background-color: #333;
+}
+
+#resetFilters {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: #205d88;
+  color: #fff;
+  cursor: pointer;
+}
+
+#resetFilters:hover {
+  background-color: #704a4a;
+}
+
+#resetFilters:active {
+  background-color: #333;
+}
+
+
+
