--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1162,80 +1162,6 @@ aside::after {
   transform: translate(0, 0); /* Volta o elemento para a posição original */
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
-  table-layout: fixed;
-}
-
-th,
-td {
-  text-align: center;
-  padding: 1rem;
-}
-tr {
-  border: #000000;
-  /*cursor: grabbing;*/
-  width: 100%;
-  flex: 1;
-}
-
-#users {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
-.t-design {
-  border: 4px solid #205d88;
-  border-left: 10px solid #205d88;
-  border-right: 1px solid #000000;
-  border-bottom: 1px solid #060606;
-  background-color: rgba(248, 233, 219, 0.7);
-
-  border-radius: 10px;
-
-  overflow: auto;
-  /*transform: translateX(80px)*/
-  box-shadow: -10px 0 20px rgba(0, 0, 0, 0.5), -1px 0 0 0 black;
-}
-
-table th {
-  background-color: #205d88;
-  color: white;
-}
-th {
-  position: sticky;
-  top: 0;
-  width: 100%;
-}
-
-tbody {
-  width: 100%;
-}
-
-tr:hover {
-  background-color: #f5f5f5;
-}
-
-thead {
-  position: sticky;
-  top: 0;
-  width: 100%;
-}
-
-td {
-  width: 100%;
-}
-
-td img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
-
 #contextMenu1 {
   display: none;
   position: fixed;
@@ -1290,4 +1216,79 @@ td img {
 #addUserButton:active {
   box-shadow: 0 0 0 #205d88; /* Remove a sombra */
   transform: translate(0, 0); /* Volta o elemento para a posição original */
+}
+
+/*table test */
+#tableContainer {
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  height: 100%;
+}
+
+.t-design {
+  border: 4px solid #205d88;
+  border-left: 10px solid #205d88;
+  border-right: 1px solid #000000;
+  border-bottom: 1px solid #060606;
+  background-color: rgba(248, 233, 219, 0.7);
+
+  border-radius: 10px;
+
+  overflow: auto;
+  /*transform: translateX(80px)*/
+  box-shadow: -10px 0 20px rgba(0, 0, 0, 0.5), -1px 0 0 0 black;
+}
+
+.header {
+  font-weight: bold;
+  color: (248, 233, 219, 0.7);
+  position: sticky;
+  top: 0;
+}
+.row.header {
+  background-color: #205d88;
+  color: white;
+}
+.table img {
+  width: 50px;
+  height: 50px;
+}
+
+.row {
+  display: flex;
+}
+.row > div:first-child {
+  width: 50px;
+  flex: none;
+}
+.row:nth-child(even) > div {
+  /* Change the background color for even rows */
+  background-color: #e9e9e9;
+}
+.row:not(.header):hover {
+  border: #205d88 2px solid;
+  border-radius: 10px;
+}
+
+.row > div {
+  flex: 1;
+  min-width: 100px;
+  padding: 10px;
+  overflow: auto;
+}
+.row-img {
+  width: 50px !important; /* Adjust this value as needed */
+}
+
+.header {
+  font-weight: bold;
+  background-color: #f0f0f0;
 }
