--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1254,35 +1254,32 @@ aside::after {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 20px;
   background-color: #f8f8f8;
   border-radius: 10px;
 }
 
-#applyFilters {
-  width: 100%;
-  padding: 10px;
+#filters label {
   margin-bottom: 5px;
-  margin-top: 5px;
-  border: none;
+  margin-top: 10px;
+  text-align: center;
+}
+
+#filters select {
+  
+  padding: 10px;
   border-radius: 5px;
-  background-color: #205d88;
-  color: #fff;
-  cursor: pointer;
-}
-
-#applyFilters:hover {
-  background-color: #704a4a;
-}
-
-#applyFilters:active {
-  background-color: #333;
+  border: 1px solid #205d88;
+  box-sizing: border-box;
+  background-color: rgba(168, 146, 124, 0.3);
 }
 
 #resetFilters {
   width: 100%;
   padding: 10px;
   margin-bottom: 5px;
+  margin-top: 15px;
   border: none;
   border-radius: 5px;
   background-color: #205d88;
