--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -654,9 +654,9 @@ aside::after {
   border-radius: 5px;
 }
 /*caracteristicas do primeiro elemento das opções do pop-up menu (icons)*/
-#restoreTask::before,
-#deleteTask::before,
-#editTask::before {
+.restore-icon::before,
+.delete-icon::before,
+.edit-icon::before {
   display: inline-block;
   width: 1em;
   height: 1em;
@@ -668,15 +668,15 @@ aside::after {
   filter: invert(1) grayscale(1) brightness(0.5);
 }
 /*icon da opção de excluir tarefa*/
-#deleteTask::before {
+.delete-icon::before {
   background-image: url("resources/Icons/trash_context.png");
 }
 /*icon da opção de editar tarefa*/
-#editTask::before {
+.edit-icon::before {
   background-image: url("resources/Icons/edit_context.png");
 }
 
-#restoreTask::before {
+.restore-icon::before {
   background-image: url("resources/Icons/restore.png");
 }
 
@@ -1192,7 +1192,7 @@ aside::after {
 .contextMenu-style {
   display: none;
   position: fixed;
-  width: 200px; /* Fixed width */
+  width: 160px; /* Fixed width */
   z-index: 1;
   background: white;
   border: 3px solid #205d88;
