--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -483,7 +483,7 @@ footer a {
 /*caracteristicas do modal adicionar tarefa*/
 #newTaskModal {
   justify-content: center;
-  height: 57%;
+  /* height: 57%; */
   width: 40%;
   z-index: 3;
 }
@@ -501,9 +501,13 @@ footer a {
 .buttons-container {
   display: flex;
   justify-content: center;
+  text-align: center;
   gap: 10px;
 }
 
+#submitTaskButton {
+  white-space: nowrap; /* This prevents the text from wrapping */
+}
 /*caracteristicas do modal de detalhes da tarefa*/
 #taskDetailsModal {
   max-width: 50%;
@@ -724,6 +728,24 @@ aside::after {
 }
 /*margens das opções do dropdown de prioridade*/
 #editTaskPriority option {
+  padding: 10px;
+}
+.dropdown-btn {
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  color: #205d88;
+  background-color: rgba(168, 146, 124, 0.3);
+  margin-bottom: 1.2rem;
+}
+/*caracteristicas do dropdown de prioridade quando se passar sobre as opções*/
+.dropdown-btn:focus {
+  outline: none;
+  border-color: #205d88;
+}
+/*margens das opções do dropdown de prioridade*/
+.dropdown-btn option {
   padding: 10px;
 }
 
@@ -1480,4 +1502,15 @@ aside::after {
 
 .active-slider:checked::before {
   left: calc(100% - var(--slider-pix));
+}
+
+.dropdown-option {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 2rem;
+}
+.container-option {
+  display: flex;
+  justify-content: space-around;
 }
