--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1296,7 +1296,6 @@ aside::after {
 }
 
 #filters select {
-  
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #205d88;
@@ -1521,4 +1520,7 @@ aside::after {
 .container-option {
   display: flex;
   justify-content: space-around;
+}
+#backButton {
+  margin-top: 200%;
 }
