--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -324,7 +324,9 @@ footer a {
   z-index: 11;
   height: 2.2rem;
 }
-
+#addCategoryButton {
+  margin-top: 0;
+}
 /* botão de adicionar tarefa*/
 #addTaskButton {
   position: relative;
@@ -340,6 +342,8 @@ footer a {
   box-shadow: 0 0 0 #205d88;
   transition: all 0.2s;
   border-radius: 10px;
+  margin-bottom: 4rem;
+  margin-top: 0;
 }
 
 /*caracteristicas do botão de adicionar tarefa quando se passa sobre ele*/
@@ -731,6 +735,7 @@ aside::after {
   color: #205d88;
   background-color: rgba(168, 146, 124, 0.3);
   margin-bottom: 1.2rem;
+  margin-right: 2rem;
 }
 /*caracteristicas do dropdown de prioridade quando se passar sobre as opções*/
 #editTaskPriority:focus {
@@ -759,8 +764,15 @@ aside::after {
 .dropdown-btn option {
   padding: 10px;
 }
+.dropdown-btn-category {
+  max-width: 180px !important;
+}
+.taskCategory {
+}
 
 #editTaskCategory {
+  display: flex;
+  flex: 1;
   font-size: 16px;
   padding: 10px;
   border-radius: 5px;
@@ -768,7 +780,7 @@ aside::after {
   color: #205d88;
   background-color: rgba(168, 146, 124, 0.3);
   margin-bottom: 1.2rem;
-  margin-right: 2rem;
+  max-width: 180px;
 }
 
 #editTaskCategory:focus {
@@ -1303,6 +1315,7 @@ aside::after {
   border: 1px solid #205d88;
   box-sizing: border-box;
   background-color: rgba(168, 146, 124, 0.3);
+  width: 180px;
 }
 
 #resetFilters {
