--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -797,6 +797,7 @@ aside::after {
   flex-direction: row;
   align-items: baseline;
   justify-content: center;
+  margin-top: 15px;
 }
 /*caracteristicas do modal editar tarefa*/
 #editTaskModal {
