--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -768,7 +768,6 @@ aside::after {
   max-width: 180px !important;
 }
 
-
 #editTaskCategory {
   display: flex;
   flex: 1;
@@ -1124,12 +1123,15 @@ aside::after {
 }
 
 #photoPreviewRegister {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
+  min-height: 150px;
+  min-width: 150px;
   border-radius: 50%;
   margin-bottom: 0px;
   margin-top: 10px;
   object-fit: cover;
+  background-position: center;
   border: 5px solid #205d88;
 }
 
