--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1552,3 +1552,21 @@ aside::after {
 #backButton {
   margin-top: 200%;
 }
+
+.bigPhotoWrapper {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 5px solid #205d88;
+  z-index: 1000;
+}
+
+.bigPhoto {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  z-index: 1000;
+}
